--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     </div>
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="https://www.linkedin.com/in/johnboothwebdev/"><i class="fab fa-linkedin"></i></a>
+                    <a class="mx-2" href="https://www.linkedin.com/in/johnboothwebdev/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <!-- <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a> -->
                     <a class="mx-2" href="https://www.github.com/jboothy" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
