--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="John Booth | Budding Web Developer" />
         <meta name="author" content="jBoothy" />
         <title>John Booth | Web Developer</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/thor-svg-1.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
