--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">About Me</h2>
                         <p class="text-white-50">
-                            My name is John Booth and I am currently working on becoming a web developer at the tech school DevMountain. I was a welding and carpentry shop foreman for 10+ years
-                            before making a career switch to web development. I am an avid NFL and NBA fan who enjoys the outdoors while camping and boating.
+                            My name is John Booth and I am currently working on becoming a web developer at the tech school DevMountain.The languages that I've learned are JavaScript, HTML, CSS, SQL, JSON, NodeJS, Git and Bootstrap. If you would like to view my work: Please click the link at the bottom of the page to view my Github.<br><br> I was a welding and carpentry shop foreman for 10+ years before making a career switch to web development. I am an avid NFL and NBA fan who enjoys the outdoors while camping and boating.
                         </p>
                     </div>
                 </div>
