changing pics and adding project

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/rocky-mtn.jpg" alt="..." />
+                <img class="img-fluid" src="assets/rsz_11645105477267.jpg" alt="..." />
             </div>
         </section>
         <!-- Projects-->
@@ -64,11 +64,11 @@
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"><embed src="assets/F21 - Capstone Demo.mp4" autostart="false" height="450" width="800"/></embed></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Featured Project</h4>
-                            <p class="text-black-50 mb-0">Featured Project</p>
+                            <h4>F21 Foundations Capstone</h4>
+                            <p class="text-black-50 mb-0">This is my capstone project I made for Foundations. The languages used were: JavaScript, HTML, CSS, NodeJS and Git.</p>
                         </div>
                     </div>
                 </div>
