fixed video for mobile

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><embed src="assets/F21 - Capstone Demo.mp4" autostart="false" height="450" width="800"/></embed></div>
+                    <div class="col-xl-8 col-lg-7"><video src="assets/F21 - Capstone Demo.mp4" width="100%" height="600" controls></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>F21 Foundations Capstone</h4>
