adding and ommitting stuff

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">About Me</h2>
                         <p class="text-white-50">
-                            My name is John Booth and I am currently working on becoming a web developer at the tech school DevMountain.The languages that I've learned are JavaScript, HTML, CSS, SQL, JSON, NodeJS, Git and Bootstrap. If you would like to view my work: Please click the link at the bottom of the page to view my Github.<br><br> I was a welding and carpentry shop foreman for 10+ years before making a career switch to web development. I am an avid NFL and NBA fan who enjoys the outdoors while camping and boating.
+                            My name is John Booth and I am currently working on becoming a web developer at the tech school DevMountain. The languages that I've learned are JavaScript, HTML, CSS, SQL, JSON, NodeJS, Git, React and Bootstrap. If you would like to view my work: Please click the link at the bottom of the page to view my Github.<br><br> I was a welding and carpentry shop foreman for 10+ years before making a career switch to web development. I am an avid NFL and NBA fan who enjoys the outdoors while camping and boating.
                         </p>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>F21 Foundations Capstone</h4>
-                            <p class="text-black-50 mb-0">This is my capstone project I made for Foundations. The languages used were: JavaScript, HTML, CSS, NodeJS and Git.</p>
+                            <p class="text-black-50 mb-0">This is my capstone project I made for Foundations. The languages used were: <img class="languageLogo" src="assets/logos/javascript-node-js-computer-icons-logo-application-software-png-favpng-ebFcx9xnNQyPYnT2RTy7PWBdV.png"/> <img class="languageLogo" src="assets/logos/HTML5_1Color_Black.png"/> <img class="languageLogo" src="assets/logos/198-1985029_css-logo-black-and-white-hd-png-download.png"/></p>
                         </div>
                     </div>
                 </div>
@@ -105,12 +105,12 @@
             </div>
         </section>
         <!-- Signup-->
-        <section class="signup-section" id="signup">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5">
-                    <div class="col-md-10 col-lg-8 mx-auto text-center">
-                        <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
+        <!-- <section class="signup-section" id="signup"> -->
+            <!-- <div class="container px-4 px-lg-5"> -->
+                <!-- <div class="row gx-4 gx-lg-5"> -->
+                    <!-- <div class="col-md-10 col-lg-8 mx-auto text-center"> -->
+                        <!-- <i class="far fa-paper-plane fa-2x mb-2 text-white"></i> -->
+                        <!-- <h2 class="text-white mb-5">Subscribe to receive updates!</h2> -->
                         <!-- * * * * * * * * * * * * * * *-->
                         <!-- * * SB Forms Contact Form * *-->
                         <!-- * * * * * * * * * * * * * * *-->
@@ -118,36 +118,36 @@
                         <!-- To make this form functional, sign up at-->
                         <!-- https://startbootstrap.com/solution/contact-forms-->
                         <!-- to get an API token!-->
-                        <form class="form-signup" id="contactForm" data-sb-form-api-token="API_TOKEN">
+                        <!-- <form class="form-signup" id="contactForm" data-sb-form-api-token="API_TOKEN"> -->
                             <!-- Email address input-->
-                            <div class="row input-group-newsletter">
-                                <div class="col"><input class="form-control" id="emailAddress" type="email" placeholder="Enter email address..." aria-label="Enter email address..." data-sb-validations="required,email" /></div>
-                                <div class="col-auto"><button class="btn btn-primary disabled" id="submitButton" type="submit">Notify Me!</button></div>
-                            </div>
-                            <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:required">An email is required.</div>
-                            <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:email">Email is not valid.</div>
+                            <!-- <div class="row input-group-newsletter"> -->
+                                <!-- <div class="col"><input class="form-control" id="emailAddress" type="email" placeholder="Enter email address..." aria-label="Enter email address..." data-sb-validations="required,email" /></div> -->
+                                <!-- <div class="col-auto"><button class="btn btn-primary disabled" id="submitButton" type="submit">Notify Me!</button></div> -->
+                            <!-- </div> -->
+                            <!-- <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:required">An email is required.</div> -->
+                            <!-- <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:email">Email is not valid.</div> -->
                             <!-- Submit success message-->
                             <!---->
                             <!-- This is what your users will see when the form-->
                             <!-- has successfully submitted-->
-                            <div class="d-none" id="submitSuccessMessage">
-                                <div class="text-center mb-3 mt-2 text-white">
-                                    <div class="fw-bolder">Form submission successful!</div>
-                                    To activate this form, sign up at
-                                    <br />
-                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                </div>
-                            </div>
+                            <!-- <div class="d-none" id="submitSuccessMessage"> -->
+                                <!-- <div class="text-center mb-3 mt-2 text-white"> -->
+                                    <!-- <div class="fw-bolder">Form submission successful!</div> -->
+                                    <!-- To activate this form, sign up at -->
+                                    <!-- <br /> -->
+                                    <!-- <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a> -->
+                                <!-- </div> -->
+                            <!-- </div> -->
                             <!-- Submit error message-->
                             <!---->
                             <!-- This is what your users will see when there is-->
                             <!-- an error submitting the form-->
-                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3 mt-2">Error sending message!</div></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
+                            <!-- <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3 mt-2">Error sending message!</div></div> -->
+                        <!-- </form> -->
+                    <!-- </div> -->
+                <!-- </div> -->
+            <!-- </div> -->
+        <!-- </section> -->
         <!-- Contact-->
         <section class="contact-section bg-black">
             <div class="container px-4 px-lg-5">
