--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">John Booth</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">Budding Web Developer</h2>
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5">Full Stack Developer</h2>
                         <a class="btn btn-primary" href="#about">Get Started</a>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">About Me</h2>
                         <p class="text-white-50">
-                            My name is John Booth and I am currently working on becoming a web developer at the tech school DevMountain.The languages that I've learned are JavaScript, HTML, CSS, SQL, JSON, NodeJS, Git and Bootstrap. If you would like to view my work: Please click the link at the bottom of the page to view my Github.<br><br> I was a welding and carpentry shop foreman for 10+ years before making a career switch to web development. I am an avid NFL and NBA fan who enjoys the outdoors while camping and boating.
+                            My name is John Booth and I am a software engineer who loves doing it and can't wait to see where the future takes me! The languages that I've learned (so far - many more to come) are JavaScript, TypeScript, React, Angular, HTML, CSS, SQL, JSON, NodeJS, Git and Bootstrap. I am currently learning C# and Unity so stay tuned for my future projects! <br><br> If you would like to view my work: Please click the link at the bottom of the page to view my Github.<br><br> I was a welding and carpentry shop foreman for 10+ years before making a career switch to software engineering. I am an avid NFL and NBA fan who enjoys the outdoors while camping and boating with my family as well as a huge video game nerd! If you have any questions, please feel free to contact me!
                         </p>
                     </div>
                 </div>
@@ -64,23 +64,23 @@
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><video src="assets/F21 - Capstone Demo.mp4" width="100%" height="600" controls></div>
+                    <div class="col-xl-8 col-lg-7"><video src="assets/F21 Specializations Capstone.mp4" width="100%" height="600" controls></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>F21 Foundations Capstone</h4>
-                            <p class="text-black-50 mb-0">This is my capstone project I made for Foundations. The languages used were: JavaScript, HTML, CSS, NodeJS and Git.</p>
+                            <h4>Specializations Capstone</h4>
+                            <p class="text-black-50 mb-0">This is my capstone project I made for Specializations at DevMountain! The languages used were: React, JavaScript, PostgreSQL, HTML, CSS, NodeJS, Bootstrap and Git.</p>
                         </div>
                     </div>
                 </div>
                 <!-- Project One Row-->
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="..." /></div>
+                    <div class="col-lg-6"><video src="assets/F21 - Capstone Demo.mp4" width="100%" height="350" controls></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Project 1</h4>
-                                    <p class="mb-0 text-white-50">Future key project will go here</p>
+                                    <h4 class="text-white">Foundations Capstone</h4>
+                                    <p class="mb-0 text-white-50">This is my capstone project I made for Foundations at DevMountain! The languages used were: JavaScript, HTML, CSS, NodeJS and Git.</p>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
                             </div>
@@ -94,8 +94,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Project 2</h4>
-                                    <p class="mb-0 text-white-50">Another key project will go here</p>
+                                    <h4 class="text-white">Next big project</h4>
+                                    <p class="mb-0 text-white-50">My next big project will go here - stay tuned!</p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
                                 </div>
                             </div>
