--- a/index.html
+++ b/index.html
@@ -2,35 +2,327 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Jboothy | Projects</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>John Booth — Projects</title>
+    <meta name="description" content="Chrome extensions, web apps, and experiments by John Booth." />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --bg: #0f1115;
+            --card: #161a22;
+            --muted: #8a93a6;
+            --text: #ebeff7;
+            --accent: #7c5cff;
+            --accent-2: #e82c2c;
+            --ring: 0 0 0 3px rgba(124, 92, 255, .25);
+        }
+
+        * {
+            box-sizing: border-box
+        }
+
+        html,
         body {
-            font-family: Arial, sans-serif;
-            background: #f5f5f5;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-            color: #333;
+            height: 100%
+        }
+
+        body {
+            margin: 0;
+            font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+            background: var(--bg);
+            color: var(--text);
         }
 
         a {
-            color: #0066cc;
-            text-decoration: none;
+            color: inherit
         }
 
-        a:hover {
-            text-decoration: underline;
+        .wrap {
+            max-width: 1100px;
+            margin: 0 auto;
+            padding: 24px
+        }
+
+        header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 12px;
+            padding: 8px 0
+        }
+
+        .brand {
+            font-weight: 800;
+            letter-spacing: .3px
+        }
+
+        .pill {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            padding: 8px 12px;
+            border-radius: 999px;
+            background: #12161f;
+            border: 1px solid #212633;
+            color: var(--muted);
+            font-size: 13px
+        }
+
+        .pill svg {
+            width: 16px;
+            height: 16px
+        }
+
+        .hero {
+            padding: 48px 0 32px;
+            display: grid;
+            grid-template-columns: 1.2fr .8fr;
+            gap: 24px
+        }
+
+        .hero h1 {
+            font-size: 40px;
+            line-height: 1.05;
+            margin: 0 0 12px
+        }
+
+        .hero p {
+            color: var(--muted);
+            margin: 0 0 18px
+        }
+
+        .cta {
+            display: flex;
+            gap: 10px;
+            flex-wrap: wrap
+        }
+
+        .btn {
+            background: var(--accent);
+            color: white;
+            border: none;
+            padding: 12px 16px;
+            border-radius: 12px;
+            font-weight: 600;
+            cursor: pointer
+        }
+
+        .btn:focus {
+            outline: var(--ring)
+        }
+
+        .btn.sec {
+            background: #1b2030;
+            border: 1px solid #2a3142
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(12, 1fr);
+            gap: 16px
+        }
+
+        .card {
+            grid-column: span 6;
+            background: var(--card);
+            border: 1px solid #212633;
+            border-radius: 16px;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column
+        }
+
+        .card .thumb {
+            background: linear-gradient(180deg, #1b2130, #12161f);
+            aspect-ratio: 16/9;
+            display: flex;
+            align-items: center;
+            justify-content: center
+        }
+
+        .card .thumb span {
+            font-size: 12px;
+            color: #b6bed0;
+            border: 1px dashed #2a3142;
+            padding: 6px 10px;
+            border-radius: 8px
+        }
+
+        .card .body {
+            padding: 16px
+        }
+
+        .card h3 {
+            margin: 0 0 6px;
+            font-size: 18px
+        }
+
+        .card p {
+            margin: 0;
+            color: var(--muted)
+        }
+
+        .meta {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            margin-top: 12px
+        }
+
+        .tag {
+            font-size: 12px;
+            color: #b6bed0;
+            background: #141826;
+            border: 1px solid #242b3a;
+            padding: 4px 8px;
+            border-radius: 999px
+        }
+
+        .links {
+            margin-top: 14px;
+            display: flex;
+            gap: 10px;
+            flex-wrap: wrap
+        }
+
+        .link {
+            background: #12161f;
+            border: 1px solid #242b3a;
+            color: #c7ceea;
+            padding: 8px 10px;
+            border-radius: 10px;
+            text-decoration: none;
+            font-size: 13px
+        }
+
+        .about {
+            margin: 38px 0;
+            padding: 20px;
+            background: var(--card);
+            border: 1px solid #212633;
+            border-radius: 16px
+        }
+
+        footer {
+            padding: 28px 0;
+            color: #97a0b6
+        }
+
+        .row {
+            display: flex;
+            gap: 12px;
+            align-items: center;
+            flex-wrap: wrap
+        }
+
+        .dot {
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            background: var(--accent)
+        }
+
+        @media (max-width:900px) {
+            .hero {
+                grid-template-columns: 1fr
+            }
+
+            .card {
+                grid-column: span 12
+            }
         }
     </style>
 </head>
 
 <body>
-    <h1>Jboothy Projects</h1>
-    <p>Home of personal projects and Chrome extensions.</p>
-    <p><a href="/privacy.html">Privacy Policy</a></p>
+    <div class="wrap">
+        <header>
+            <div class="row">
+                <div class="dot"></div>
+                <div class="brand">John Booth</div>
+                <span class="pill" title="Utah, USA">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                        <path d="M12 21s-6-4.35-6-10a6 6 0 1112 0c0 5.65-6 10-6 10z" stroke-width="1.6" />
+                    </svg>
+                    Salem, UT
+                </span>
+            </div>
+            <a class="pill" href="/privacy.html">Privacy Policy</a>
+        </header>
+
+        <section class="hero">
+            <div>
+                <h1>Small tools, big quality-of-life wins.</h1>
+                <p>Software dev building practical stuff — Chrome extensions, web utilities, and experiments. No fluff,
+                    just useful.</p>
+                <div class="cta">
+                    <a class="btn" href="#projects">View Projects</a>
+                    <a class="btn sec" href="mailto:jhunter.booth@gmail.com">Contact</a>
+                </div>
+            </div>
+            <div class="about">
+                <strong>Now live:</strong>
+                <p style="margin:.4rem 0 0;color:var(--muted)">Twitch & YouTube Auto Helper — auto-mutes ads, unmutes
+                    after, and claims Twitch channel points.</p>
+            </div>
+        </section>
+
+        <section id="projects" class="grid">
+            <!-- Extension Card -->
+            <article class="card">
+                <div class="thumb">
+                    <img src="assets/screenshot_1_1280x800.jpg" alt="Twitch & YouTube Auto Helper Screenshot">
+                </div>
+                <div class="body">
+                    <h3>Twitch & YouTube Auto Helper</h3>
+                    <p>Detects ad playback on Twitch/YouTube, mutes during ads, restores audio when they end, and
+                        auto-claims channel points.</p>
+                    <div class="meta">
+                        <span class="tag">Chrome Extension</span>
+                        <span class="tag">Manifest V3</span>
+                        <span class="tag">JS</span>
+                    </div>
+                    <div class="links">
+                        <a class="link"
+                            href="https://chromewebstore.google.com/detail/ogfggfdoffkddjfgammfnbgbnkfgpmaj?utm_source=item-share-cb"
+                            target="_blank" rel="noopener">Chrome Web Store</a>
+                        <a class="link" href="https://github.com/jboothy" target="_blank" rel="noopener">Source /
+                            GitHub</a>
+                    </div>
+                </div>
+            </article>
+
+            <!-- Add more cards as you build -->
+            <article class="card">
+                <div class="thumb"><span>Coming Soon</span></div>
+                <div class="body">
+                    <h3>Next thing</h3>
+                    <p>Space reserved for your next ship. Keep it rolling.</p>
+                    <div class="meta">
+                        <span class="tag">WIP</span>
+                    </div>
+                    <div class="links">
+                        <a class="link" href="#">Details</a>
+                    </div>
+                </div>
+            </article>
+        </section>
+
+        <footer>
+            <div class="row">
+                <div class="dot"></div>
+                <div>© <span id="year"></span> John Booth • Built on GitHub Pages</div>
+            </div>
+        </footer>
+    </div>
+
+    <script>
+        // set year
+        document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
 </body>
 
 </html>
