--- a/index.html
+++ b/index.html
@@ -137,18 +137,19 @@
 
         .card .thumb {
             background: linear-gradient(180deg, #1b2130, #12161f);
-            aspect-ratio: 16/9;
+            aspect-ratio: 16 / 9;
             display: flex;
             align-items: center;
-            justify-content: center
+            justify-content: center;
+            overflow: hidden;
+            position: relative;
         }
 
-        .card .thumb span {
-            font-size: 12px;
-            color: #b6bed0;
-            border: 1px dashed #2a3142;
-            padding: 6px 10px;
-            border-radius: 8px
+        .card .thumb img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
         }
 
         .card .body {
