Update privacy policy link and label in header
Changed the privacy policy link in the header to point to /twitch-youtube-privacy.html and updated the label to 'Extension Privacy Policy' for clarity.

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     Salem, UT
                 </span>
             </div>
-            <a class="pill" href="/privacy.html">Privacy Policy</a>
+            <a class="pill" href="/twitch-youtube-privacy.html">Extension Privacy Policy</a>
         </header>
 
         <section class="hero">
