--- a/twitch-youtube-privacy.html
+++ b/twitch-youtube-privacy.html
@@ -3,54 +3,150 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Privacy Policy - Twitch & YouTube Auto Helper</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Privacy Policy – Twitch & YouTube Auto Helper</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: sans-serif;
-            max-width: 700px;
-            margin: 40px auto;
-            line-height: 1.6;
-            color: #222;
+        :root {
+            --bg: #0f1115;
+            --card: #161a22;
+            --muted: #8a93a6;
+            --text: #ebeff7;
+            --accent: #7c5cff;
         }
 
-        h1,
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 0;
+            padding: 40px 20px;
+            background: var(--bg);
+            color: var(--text);
+            font-family: "Inter", system-ui, sans-serif;
+            line-height: 1.6;
+        }
+
+        .wrap {
+            max-width: 800px;
+            margin: 0 auto;
+            background: var(--card);
+            border: 1px solid #212633;
+            border-radius: 16px;
+            padding: 32px 40px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+        }
+
+        .back-btn {
+            display: inline-block;
+            background: var(--accent);
+            color: #fff;
+            padding: 10px 16px;
+            border-radius: 10px;
+            font-weight: 600;
+            text-decoration: none;
+            transition: background 0.2s ease;
+            margin-bottom: 24px;
+        }
+
+        .back-btn:hover {
+            background: #6a4ce3;
+        }
+
+        h1 {
+            font-size: 28px;
+            font-weight: 800;
+            color: var(--text);
+            margin-top: 0;
+        }
+
         h2 {
-            color: #333;
+            color: var(--accent);
+            margin-top: 2rem;
+        }
+
+        p,
+        li {
+            color: var(--muted);
+            font-size: 15px;
+        }
+
+        ul {
+            margin-left: 1.2rem;
+        }
+
+        a {
+            color: var(--accent);
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        .footer {
+            margin-top: 2rem;
+            text-align: center;
+            color: var(--muted);
+            font-size: 13px;
+        }
+
+        .dot {
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            background: var(--accent);
+            display: inline-block;
+            margin-right: 6px;
         }
     </style>
 </head>
 
 <body>
-    <h1>Privacy Policy</h1>
-    <p><strong>Last updated:</strong> October 2025</p>
+    <div class="wrap">
+        <a href="/" class="back-btn">← Back to Home</a>
 
-    <p>
-        Twitch & YouTube Auto Helper does not collect, store, or share any personal or identifiable data.
-        All actions take place locally on your device and are not transmitted or logged externally.
-    </p>
+        <h1>Privacy Policy</h1>
+        <p><strong>Last updated:</strong> October 2025</p>
 
-    <h2>Data Usage</h2>
-    <p>
-        The extension interacts only with the Twitch and YouTube websites to:
-    </p>
-    <ul>
-        <li>Detect when ads start and end</li>
-        <li>Mute/unmute video playback accordingly</li>
-        <li>Automatically claim Twitch channel points</li>
-    </ul>
-    <p>No personal information, browsing history, or usage data is collected or sent to any server.</p>
+        <p>
+            Twitch & YouTube Auto Helper does not collect, store, or share any personal or identifiable data.
+            All actions take place locally on your device and are not transmitted or logged externally.
+        </p>
 
-    <h2>Permissions</h2>
-    <ul>
-        <li><strong>notifications</strong> — used to show when an ad is detected, muted, or unmuted.</li>
-        <li><strong>host permissions</strong> — required for twitch.tv and youtube.com to identify ad states and perform
-            local actions.</li>
-    </ul>
+        <h2>Data Usage</h2>
+        <p>
+            The extension interacts only with the Twitch and YouTube websites to:
+        </p>
+        <ul>
+            <li>Detect when ads start and end</li>
+            <li>Mute/unmute video playback accordingly</li>
+            <li>Automatically claim Twitch channel points</li>
+        </ul>
+        <p>No personal information, browsing history, or usage data is collected or sent to any server.</p>
 
-    <h2>Contact</h2>
-    <p>
-        If you have any questions about this policy, please contact the developer via your GitHub profile.
-    </p>
+        <h2>Permissions</h2>
+        <ul>
+            <li><strong>notifications</strong> — used to show when an ad is detected, muted, or unmuted.</li>
+            <li><strong>host permissions</strong> — required for twitch.tv and youtube.com to identify ad states and
+                perform
+                local actions.</li>
+        </ul>
+
+        <h2>Contact</h2>
+        <p>
+            If you have any questions about this policy, please contact the developer via your
+            <a href="https://github.com/Boothnir" target="_blank" rel="noopener">GitHub profile</a>.
+        </p>
+
+        <div class="footer">
+            <span class="dot"></span> ©
+            <script>document.write(new Date().getFullYear());</script> Boothnir • Built on GitHub Pages
+        </div>
+    </div>
 </body>
 
 </html>
