Update links and footer in index.html
Moved the Privacy Policy link to the main link section, updated the GitHub profile link to 'boothnir', and clarified the footer to indicate hosting on GitHub Pages.

--- a/index.html
+++ b/index.html
@@ -251,7 +251,6 @@
                     Salem, UT
                 </span>
             </div>
-            <a class="pill" href="/twitch-youtube-privacy.html">Extension Privacy Policy</a>
         </header>
 
         <section class="hero">
@@ -290,8 +289,9 @@
                         <a class="link"
                             href="https://chromewebstore.google.com/detail/ogfggfdoffkddjfgammfnbgbnkfgpmaj?utm_source=item-share-cb"
                             target="_blank" rel="noopener">Chrome Web Store</a>
-                        <a class="link" href="https://github.com/jboothy" target="_blank" rel="noopener">Source /
+                        <a class="link" href="https://github.com/boothnir" target="_blank" rel="noopener">Source /
                             GitHub</a>
+                        <a class="link" href="/twitch-youtube-privacy.html">Privacy Policy</a>
                     </div>
                 </div>
             </article>
@@ -315,7 +315,8 @@
         <footer>
             <div class="row">
                 <div class="dot"></div>
-                <div>© <span id="year"></span> John Booth • Built on GitHub Pages</div>
+                <div>© <span id="year"></span> John Booth • Hosted on <a href="https://github.com/boothnir"
+                        target="_blank" rel="noopener">GitHub</a> Pages</div>
             </div>
         </footer>
     </div>
