Update extension card image and add logo asset
Replaced the screenshot image with the new youtubeTwitchHelperLogo.png in the extension card on index.html. Added the logo image asset to the assets directory.

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <!-- Extension Card -->
             <article class="card">
                 <div class="thumb">
-                    <img src="assets/screenshot_1_1280x800.jpg" alt="Twitch & YouTube Auto Helper Screenshot">
+                    <img src="assets/youtubeTwitchHelperLogo.png" alt="Twitch & YouTube Auto Helper Screenshot">
                 </div>
                 <div class="body">
                     <h3>Twitch & YouTube Auto Helper</h3>
